fix test compatibility with older api levels